# macro-bania

./: .gitignore  PLAN.md  README.md  main.cpp  main.py  pyproject.toml
claude/: PLAN.md
docs/adr/: 0001-three-ai-synthesis.md
docs/design/: recorder.md
idea/codex/: PLAN.md
idea/gemini/: implementation_plan.md
scripts/: spike_grounding.py
src/macrobania/: __init__.py  cli.py  config.py  logging.py  models.py
src/macrobania/agent/: __init__.py  captioner.py  client.py  grounder.py  planner.py  prompts.py  verifier.py
src/macrobania/capture/: __init__.py  backend.py  dxcam_backend.py  frame_diff.py  mss_backend.py
src/macrobania/inputio/: __init__.py  failsafe.py  injector.py  listener.py
src/macrobania/perception/: __init__.py  matcher.py  ocr.py  uia.py
src/macrobania/player/: __init__.py  base.py  frame_cache.py  mode_a_faithful.py  mode_b_grounded.py  mode_c_autonomous.py
src/macrobania/recording/: __init__.py  builder.py  repo.py  session.py  viewer.py  writer.py
src/macrobania/safety/: __init__.py  irreversible.py  killswitch.py  pii.py  process_allowlist.py
src/macrobania/storage/: __init__.py  db.py  schema.sql
src/macrobania/ui/: __init__.py  main_window.py
tests/: conftest.py  test_builder.py  test_capture_mss.py  test_cli.py  test_config.py  test_failsafe.py  test_frame_cache.py  test_frame_diff.py  test_grounder_parsing.py  test_injector.py  test_killswitch.py  test_matcher.py  test_mode_a.py  test_mode_b.py  test_mode_c.py  test_models.py  test_pii.py  test_planner_parsing.py  test_player_allowlist.py  test_prompts.py  test_recording_writer.py  test_safety_extras.py  test_storage.py  test_verifier_parsing.py  test_viewer.py
